--- a/style.css
+++ b/style.css
@@ -10,32 +10,40 @@
 header {
   top: 0;
   left: 0;
-  width: 100%; 
-  display: flex;
-  justify-content: space-between; 
-  align-items: center;
   z-index: 100;
-  padding: 30px 100px;
+  padding: 24px 80px;
 }
 
 #logo {
-  font-size: 1.5rem;
+  font-size: 1.7em;
   color: #333;
   cursor: default;
-}
-
-.navigation {
-  margin-right: -500px;
 }
 
 #logo-name {
   color: #2222ec;
 }
 
+.navigation {
+  margin: auto;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+}
+
+.navigation ul {
+  display: flex;
+  text-decoration: none;
+  list-style: none;
+}
+
+.navigation ul li .active {
+  color: #2222ec;
+}
+
 .navigation a{
   font-size: 1.1rem;
   color: #555;
-  text-decoration: none;
   margin-right: 40px;
   font-weight: 500;
   position: relative;
@@ -48,35 +56,52 @@ header {
   font-weight: bold;
 }
 
-.btn-talk {
-  color: #fff;
-  font-size: 1rem;
-  border-radius: 8px;
-  border: 2px solid #2222ec;
-  padding: 8px 14px;
-  background: #2222ec;
+#talk{
+  padding: 8px 12px;
+  background: darkblue;
   text-decoration: none;
+  border-radius: 8px;
+  color: #fff;
+  font-size: 1.1em;
+  font-weight: 500;
 }
 
-.btn-talk:hover {
+#talk:hover {
   color: #2222ec;
   background: transparent;
+  border: #2222ec solid 2px;
 }
+
+
+
+
 
 #home {
   position: relative;
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  padding: 30px 100px;
+  padding: 0 80px;
 }
 
-#content {
-  max-width: 500px;
+#home #content {
+  width: 100%;
   color: #555;
-  margin-right: 10rem;
 }
 
-#content h1 {
+
+
+
+
+
+
+
+
+
+
+
+
+#home #content h1 {
   font-size: 1.5rem;
 }
 
@@ -160,9 +185,12 @@ header {
   text-align: center;
   display: flex;
   justify-content: space-between;
-  
 }
 
+#div {
+  margin-left: 150px;
+}
+/*
 #scroll-group {
   list-style: none;
   overflow: hidden;
@@ -177,7 +205,7 @@ header {
   100% {
     transform: translateX(-100%);
   }
-}
+}*/
 
 .scrolling #scroll-group .scroll a {  
   font-size: 24px;
